--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -3,16 +3,22 @@
 @use 'sass/color';
 @use 'sass/base';
 
+.builder-container {
+    @include mixin.center-items(flex-start);
+    gap: size.$gap;
+}
+
 .selector {
     flex: 1;
     @include mixin.no-scrollbar;
     z-index: 2;
     width: size.$task-width;
-    max-height: calc(100% - 3 * #{size.$gap} - #{size.$task-height});
+    max-height: calc(100% - #{size.$gap} - #{size.$task-height});
     overflow-y: scroll;
     border-radius: size.$task-radius;
     .column-container {
         width: 100%;
+        height: 100%;
         padding: 0 !important;
         margin: 0 !important;
         background-color: rgba(color.$darkest, 0.25);
@@ -29,16 +35,16 @@
 }
 
 .trash {
-    flex: 1;
+    flex: 0 0 size.$task-height;
     z-index: 2;
     width: 100%;
     height: size.$task-height;
     .column-container {
         justify-content: center;
         width: 100%;
-        height: calc(100% - size.$gap);
+        height: 100%;
         padding: 0 !important;
-        margin-right: 0 !important;
+        margin: 0 !important;
         background-color: rgba(color.$darkest, 0.25);
         .tasks-wrapper {
             height: 100%;
