--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -26,14 +26,15 @@
 }
 
 .tab-panel {
-    height: calc(100% - size.$tab-list-height - 3 * size.$gap);
+    height: calc(100% - size.$tab-list-height - 2 * size.$gap);
     @include mixin.center-items;
     flex-flow: column;
     gap: size.$gap;
-    padding: 0 size.$gap size.$gap size.$gap;
     & > div {
         display: flex;
         flex-flow: column nowrap;
-        height: 100%;
+        height: calc(100% - size.$gap);
+        width: calc(100% - (2 * size.$gap));
+        padding: 0 size.$gap size.$gap size.$gap;
     }
 }
