--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -4,10 +4,21 @@
 @use 'sass/mixin';
 @use 'sass/font';
 
+.export-container {
+    @include mixin.full;
+    @include mixin.no-scrollbar;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: size.$gap;
+    overflow-y: scroll;
+}
+
 .section {
     flex: 1;
     @include mixin.center-items(flex-start);
+    flex-flow: column nowrap;
     width: 100%;
+    max-height: 25%;
     .header {
         width: calc(100% - size.$gap);
         @include mixin.center-items(space-between);
@@ -25,8 +36,10 @@
     .value {
         flex: 1;
         width: 100%;
+        @include mixin.no-scrollbar;
         background-color: rgba(color.$darkest, 0.25);
         border-radius: size.$task-radius;
+        overflow-y: scroll;
         .code {
             padding: 0.5 * size.$gap;
             overflow: auto;
@@ -37,6 +50,89 @@
             font-family: font.$code;
             font-size: size.$small-text;
             color: color.$light-text;
+        }
+    }
+}
+
+.input-container {
+    padding-top: size.$smaller-text;
+    .MuiTextField-root {
+        p.Mui-error {
+            color: color.$red;
+            font-family: font.$text;
+            font-size: size.$small-text;
+            &::before {
+                content: 'Error: '
+            }
+        }
+        label {
+            font-family: font.$text;
+            &.Mui-focused {
+                color: color.$light-text;
+            }
+            &.Mui-error {
+                color: color.$red;
+            }
+        }
+        .MuiOutlinedInput-root {
+            input, textarea {
+                color: color.$white;
+                font-family: font.$code;
+                font-size: size.$small-text;
+            }
+            textarea {
+                @include mixin.no-scrollbar;
+                white-space: pre;
+                overflow-x: scroll !important;
+            }
+            fieldset {
+                border-color: color.$lightish;
+                border-width: 1px;
+                background-color: rgba(color.$darkest, 0.25);
+                border-radius: 0;
+                legend > span {
+                    font-size: 0.75em;
+                }
+            }
+            &:hover fieldset {
+                border-color: color.$light;
+            }
+            &.Mui-focused fieldset {
+                border-color: color.$light;
+            }
+            &.Mui-error fieldset {
+                border-color: color.$red !important;
+            }
+        }
+        .MuiInput-underline {
+            &:hover::before,
+            &::before {
+                border-bottom-color: color.$lightish;
+            }
+            &:hover::after,
+            &::after {
+                border-bottom-color: color.$light;
+            }
+            input {
+                font-weight: 500;
+            }
+        }
+        *:not(input) {
+            color: color.$light-text;
+            font-size: 1em;
+        }
+        width: 100%;
+        font-size: 1.8rem;
+    }
+    & > .MuiTextField-root {
+        &:first-of-type {
+            margin-top: 0;
+        }
+        &:first-of-type > .MuiOutlinedInput-root > fieldset {
+            border-radius: size.$task-radius size.$task-radius 0 0;
+        }
+        &:last-of-type > .MuiOutlinedInput-root > fieldset {
+            border-radius: 0 0 size.$task-radius size.$task-radius;
         }
     }
 }
