--- a/src/families/ref-finance/ref-finance.scss
+++ b/src/families/ref-finance/ref-finance.scss
@@ -1,5 +1,6 @@
 @use 'sass/color';
 
-.ref-withdraw-task {
+.ref-withdraw-task,
+.ref-swap-task {
     background: linear-gradient(to top, #00c08b, #009289, #006474, #00384e, #001220);
 }
