--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -4,9 +4,11 @@
 @use 'sass/animation';
 
 .layout-wrapper {
+    position: relative;
     display: flex;
     flex-flow: row nowrap;
-    height: 100%;
+    height: calc(100% - 2 * size.$gap);
+    top: 2 * size.$gap;
     .layout-container {
         @include mixin.full;
         @include mixin.center-items(center, flex-start);
@@ -27,7 +29,7 @@
     &::before {
         content: '';
         position: fixed;
-        top: 0;
+        top: 2 * size.$gap;
         left: 0;
         height: calc(2.5 * size.$gap - 0.5 * (size.$gap - size.$large-text));
         min-width: 100%;
