--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -13,6 +13,6 @@ $task-height: 19.2rem;
 $task-width: 40rem; 
 $task-radius: 2.4rem;
 
-$menu-width: 0rem;// 25vw;
+$menu-size: 0rem;// 25vw;
 
 $tab-list-height: 3.2rem;
