--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -17,8 +17,6 @@
     overflow-y: scroll;
     border-radius: size.$task-radius;
     .column-container {
-        width: 100%;
-        height: 100%;
         padding: 0 !important;
         margin: 0 !important;
         background-color: rgba(color.$darkest, 0.25);
@@ -53,6 +51,37 @@
             position: absolute;
             color: color.$light-text;
             font-size: size.$huge-text;
+        }
+    }
+}
+
+.mini-trash {
+    display: none;
+}
+
+.mini-selector {
+    @extend .selector;
+    flex: 1 0 size.$task-height;
+    z-index: 2;
+    width: 100%;
+    max-height: 0.5 * size.$task-height;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    border-radius: size.$task-radius;
+    .column-container {
+        width: max-content;
+        height: 0.5 * size.$task-height;
+        .tasks-wrapper {
+            flex: 1 1 0;
+            .mini-task-wrapper {
+                margin-right: size.$gap;
+            }
+            .mini-task-wrapper:last-of-type {
+                margin-right: 0 !important;
+            }
+            .icon {
+                display: none;
+            }
         }
     }
 }
