--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -11,6 +11,12 @@
     flex-flow: column nowrap;
     gap: size.$gap;
     overflow-y: scroll;
+    &::after {
+        content: ' ';
+        white-space: pre;
+        visibility: hidden;
+        width: 100%;
+    }
 }
 
 .section {
@@ -56,6 +62,59 @@
 
 .input-container {
     padding-top: size.$smaller-text;
+    .unitInput {
+        @include mixin.center-items(center, flex-start);
+        flex-flow: row nowrap;
+        .MuiTextField-root {
+            width: unset !important;
+            &:first-of-type {
+                flex: 2 1 auto;
+            }
+            &:last-of-type {
+                flex: 1 0 40px;
+                margin-left: 0.25 * size.$gap;
+                select {
+                    height: 2rem;
+                    line-height: 1rem;
+                    font-size: size.$small-text;
+                }
+            }
+        }
+        &:first-of-type .MuiTextField-root {
+            &:first-of-type fieldset {
+                border-radius: size.$task-radius 0 0 0;
+            }
+            &:last-of-type fieldset {
+                border-radius: 0 size.$task-radius 0 0;
+            }
+        }
+        &:last-of-type .MuiTextField-root {
+            &:first-of-type fieldset {
+                border-radius: 0 0 0 size.$task-radius;
+            }
+            &:last-of-type fieldset {
+                border-radius: 0 0 size.$task-radius 0;
+            }
+        }
+    }
+    .checkbox {
+        @include mixin.center-items(flex-start, center);
+        flex-flow: row nowrap;
+        width: 100%;
+        p {
+            color: color.$light-text;
+            font-size: size.$small-text;
+        }
+        .MuiCheckbox-root {
+            color: color.$light;
+            &.Mui-checked {
+                color: color.$green;
+            }
+            .MuiSvgIcon-root {
+                font-size: size.$text;
+            }
+        }
+    }
     .MuiTextField-root {
         p.Mui-error {
             color: color.$red;
@@ -145,6 +204,10 @@
     }
 }
 
+option {
+    font-size: size.$text;
+}
+
 
 .error-container {
     width: 100%;
@@ -183,6 +246,19 @@
                 font-size: size.$large-text;
             }
         }
+    }
+}
+
+.button {
+    padding: 0.25 * size.$gap 0.5 * size.$gap;
+    position: sticky;
+    bottom: 0;
+    border-radius: size.$task-radius;
+    &.propose {
+        background-color: color.$green;
+    }
+    &.login {
+        background-color: color.$light;
     }
 }
 
