--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -4,6 +4,7 @@
 @use 'sass/mixin';
 
 @mixin backdrop {
+    display: none; // TODO: fix "party mode"
     position: absolute;
     width: 4 * size.$gap;
     height: 4 * size.$gap;
