--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,3 +38,28 @@
         padding: 0 size.$gap size.$gap size.$gap;
     }
 }
+
+.loader {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    &::after {
+        content: " ";
+        display: block;
+        width: 64px;
+        height: 64px;
+        margin: 8px;
+        border-radius: 50%;
+        border: 6px solid color.$lightish;
+        border-color: color.$lightish transparent color.$lightish transparent;
+        animation: lds-dual-ring 1.2s linear infinite;
+    }
+    @keyframes lds-dual-ring {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+}
