--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -13,7 +13,7 @@
     @include mixin.no-scrollbar;
     z-index: 2;
     width: size.$task-width;
-    max-height: calc(100% - #{size.$gap} - #{size.$task-height});
+    max-height: 100%;
     overflow-y: scroll;
     border-radius: size.$task-radius;
     .column-container {
