--- a/src/global.scss
+++ b/src/global.scss
@@ -18,9 +18,9 @@
 
 body, html, #root {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: color.$white;
-    font-size: 62.5%;// 0.485vw; // 1rem = 10px
+    font-size: 0.6vw;// 0.485vw; // 1rem = 10px
 }
 
 a {
