--- a/src/global.scss
+++ b/src/global.scss
@@ -20,7 +20,7 @@ body, html, #root {
     width: 100%;
     height: 100vh;
     background-color: color.$white;
-    font-size: 0.6vw;// 0.485vw; // 1rem = 10px
+    font-size: calc(2mm + 0.08vw);
 }
 
 a {
