--- a/src/global.scss
+++ b/src/global.scss
@@ -20,7 +20,7 @@ body, html, #root {
     width: 100%;
     height: 100vh;
     background-color: color.$white;
-    font-size: calc(2mm + 0.08vw);
+    font-size: clamp(1.8mm, 0.6vw, 2.5mm);
 }
 
 a {
