Added smart contract checks to propose button

--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -261,6 +261,10 @@ option {
             background-color: color.$darkish;
             cursor: not-allowed;
         }
+        p {
+            font-size: size.$smaller-text;
+            color: color.$red;
+        }
     }
     &.login {
         background-color: color.$light;
