--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -21,14 +21,16 @@
 
 .section {
     flex: 1;
+    position: relative;
     @include mixin.center-items(flex-start);
     flex-flow: column nowrap;
     width: 100%;
     max-height: 25%;
     .header {
-        width: calc(100% - size.$gap);
+        width: calc(100% - 1.5 * size.$gap);
         @include mixin.center-items(space-between);
         h3 {
+            cursor: pointer;
             font-size: size.$text;
             color: color.$light-text;
             text-align: left;
@@ -37,6 +39,14 @@
             @include mixin.light-icon;
             cursor: pointer;
             font-size: size.$text;
+        }
+        .collapse {
+            position: absolute;
+            left: 0;
+            &[collapsed="yes"] {
+                transform: rotate(-90deg);
+            }
+            transition: all 50ms linear;
         }
     }
     .value {
