--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -1,5 +1,6 @@
 @use 'sass/color';
 @use 'sass/mixin';
+@use 'sass/size';
 
 .near-transfer-task {
     background: color.$lightest;
@@ -14,5 +15,14 @@
     }
     * > a {
         color: darken(color.$blue, 20%) !important;
+    }
+}
+
+.MuiInputAdornment-root {
+    width: fit-content;
+    p {
+        display: block !important;
+        font-size: size.$small-text !important;
+        color: color.$lightish;
     }
 }
