--- a/src/components/export/export.scss
+++ b/src/components/export/export.scss
@@ -20,7 +20,7 @@
     flex-flow: column nowrap;
     width: 100%;
     max-height: 25%;
-    .header {
+    .sidebar {
         width: calc(100% - 1.5 * size.$gap);
         @include mixin.center-items(space-between);
         h3 {
@@ -215,7 +215,7 @@ option {
 
 .error-container {
     width: 100%;
-    .header {
+    .sidebar {
         padding-left: 0.5 * size.$gap;
         h3 {
             font-size: size.$text;
