--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -16,11 +16,9 @@
 }
 
 .layout-wrapper {
-    position: relative;
+    @include mixin.page-wrapper;
     display: flex;
     flex-flow: row nowrap;
-    height: calc(100% - 2 * size.$gap);
-    top: 2 * size.$gap;
     .layout-container {
         @include mixin.full;
         @include mixin.center-items(center, flex-start);
@@ -69,14 +67,5 @@
             flex-basis: calc(2 * size.$gap + animation.$menu-expand-width);
             transition: flex-basis animation.$menu-expand-time ease-out;
         }
-    }
-    &::before {
-        content: '';
-        position: fixed;
-        top: 2 * size.$gap;
-        left: 0;
-        height: calc(2.5 * size.$gap - 0.5 * (size.$gap - size.$large-text));
-        min-width: 100%;
-        background-color: color.$light;
     }
 }
